# exercises

./: .gitignore  README  amplify.yml
ST/: Main.hs
amplifyapp/: package-lock.json
amplifyapp/src/: App.js
args/: Main.hs  args.cabal  args.txt
baka/: coredump0.c  coredump01.c  coredump02.c  coredump03.c  coredump04.c  coredump05.c  coredump06.c  coredump07.c  coredump08.c  coredump09.c  coredump10.c  coredump11.c  coredump12.c  dev.c  dev.hs
btree/: .depend  Makefile  btree.c  btree.h  btree_in.h  btree_types.h  delete.c  main.c  store.c
btree/test/: .depend  Makefile  dump.c  test.c
cd/: Main.hs
chan/: Main.hs
cloudwatchlib/: cw.go  cw_test.go  go.mod  go.sum
cloudwatchlib/cmd/latency/: main.go
cloudwatchlib/lib/chartjs/: chartjs.go
conduit05/: Client.hs  Echo.hs  Echo2.hs  EchoSize.hs  FileIO.hs  Proxy.hs  ToUpper.hs
dc_haskell/: Parser.hs  README.rst  Stack.hs  Stack2.hs  Stack3.hs  Stack4.hs  dc.hs  dc2.hs  dc3.hs  dc4.hs
delta/: delta.go  delta_test.go
effin-test/: Main.hs  effin-test.cabal
elm-ports/: index.html
elm-ports/src/: Main.elm
elm-reference/: elm.json
elm-reference/src/: Complex.elm  Main.elm
elm-ui/: index.html
elm-ui/src/: Main.elm
erlang_httpd/: Makefile  counter.erl  httpd.erl  logger.erl  request_parser.erl
ffi/: Add.hs  Getpid.hs  Malloc.hs  README.rst  Sample.hs  sin.c
flock/a/: main.go
flock/b/: main.go
github-milestone/: .gitignore  github-milestone.cabal
github-milestone/src/: Main.hs
gohttpd/: go.mod  main.go
gohttpd/lib/requestloghandler/: logger.go  requestloghandler.go
grep-ipv4/: .gitignore  Grep.hs  grep-ipv4.hs
hrr/: .gitignore  DataSource.hs  Main.hs  Tables.hs  hrr-test.cabal  setup.sh
http-attoparsec/: LICENSE  Main.hs  http-attoparsec.cabal  index.html
infix/: Main.hs
irc/: config.yml.sample  ellie.rb  nico.rb  test.rb
lens/: Main.hs  test.cabal
logger/: Main.hs  logger.cabal
mecab-test/: Main.hs  mecab-test.cabal
mergedata/: main.go  main_test.go
mvar/: Main.hs
newtype/: Main.hs
nomhttpd/: .depend  Makefile  main.c  parser.c  server.c  test.cgi  worker.c
paramcount/: main.hs
parseargs/: Main.hs  args.cabal
prime/: Main.hs
protoview/: go.mod  go.sum  main.go
protoview/test/: test.pb.go  test.proto
protoview/test/toproto/: main.go
purescript/: LICENSE-MIT  README.md  bower.json  package.json
rdbtree/: .ghci  sort.hs
record/: Main.hs  TH.hs
reversi/: LICENSE  reversi.cabal
reversi/src/: Game.hs  Main.hs  Player.hs
reversi/src/Player/: Human.hs  MinMax.hs  NegaMax.hs  NegaMax2.hs  SimpleAI.hs
signal.rb/: int.rb
smartclient/: index.html  main.js
smartclient/isomorphic/locales/: frameworkMessages.properties  frameworkMessages_ar.properties  frameworkMessages_ba.properties  frameworkMessages_cr.properties  frameworkMessages_cs.properties  frameworkMessages_de.properties  frameworkMessages_el.properties  frameworkMessages_es.properties  frameworkMessages_fi.properties  frameworkMessages_fr.properties  frameworkMessages_fr_FR.properties  frameworkMessages_hr.properties  frameworkMessages_hu_HU.properties  frameworkMessages_id.properties  frameworkMessages_it.properties  frameworkMessages_ja.properties  frameworkMessages_nb_NO.properties  frameworkMessages_nl.properties  frameworkMessages_pl.properties  frameworkMessages_pl_PL.properties  frameworkMessages_pt.properties  frameworkMessages_pt_BR.properties  frameworkMessages_ro_RO.properties  frameworkMessages_ru.properties  frameworkMessages_ru_RU.properties  frameworkMessages_sk.properties  frameworkMessages_sr.properties  frameworkMessages_sr_Latn.properties  frameworkMessages_sv_SE.properties  frameworkMessages_uk_UA.properties  frameworkMessages_zh_CN.properties  frameworkMessages_zh_TW.properties
smartclient/isomorphic/skins/BlackOps/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/Cupertino/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/Enterprise/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/EnterpriseBlue/: load_skin.js  skin_styles.css  unsupported_browser.html
smartclient/isomorphic/skins/Graphite/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/Mobile/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/SilverWave/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/Simplicity/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/SmartClient/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/ToolSkin/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/TreeFrog/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/fleet/: load_skin.js  skin_styles.css
smartclient/isomorphic/skins/standard/: load_skin.js  skin_styles.css
smartclient/isomorphic/system/development/: ISC_Calendar.js  ISC_ClassBrowser.js  ISC_Containers.js  ISC_Core.js  ISC_DBConsole.js  ISC_DSBrowser.js  ISC_DataBinding.js  ISC_DeveloperConsole.js  ISC_DocViewer.js  ISC_Drawing.js  ISC_EBay.js  ISC_ExampleViewer.js  ISC_FileBrowser.js  ISC_FileLoader.js  ISC_Forms.js  ISC_Foundation.js  ISC_Grids.js  ISC_History.js  ISC_Kapow.js  ISC_PluginBridges.js  ISC_RichTextEditor.js  ISC_SQLBrowser.js  ISC_SalesForce.js  ISC_Scheduler.js  ISC_SyntaxHiliter.js  ISC_Tools.js  ISC_Workflow.js
smartclient/isomorphic/system/helpers/: Log.html
smartclient/isomorphic/system/modules-debug/: ISC_Calendar.js  ISC_ClassBrowser.js  ISC_Containers.js  ISC_Core.js  ISC_DSBrowser.js  ISC_DataBinding.js  ISC_EBay.js  (+12 more)
start_haskell/: Count.hs  hello.hs  hello.lhs  io.hs  parser.hs  qsort.hs  sh3.lhs  sh4.hs  shape.hs  test.hs
start_haskell/4/: Exercise01-ja.lhs  Exercise02-ja.lhs  Exercise06-ja.lhs  Exercise07-ja.lhs  calc.hs
start_haskell/6/: ex9.lhs
streams/: .ghcignore  data.txt  streams.cabal
streams/src/: Cat0.hs  Cat1.hs  Cat2.hs  Gen.hs  Main.hs
svnlog/: svnlog.rb
template_haskell/: Curry.hs  Curry2.hs  Heredoc.hs  THex.hs  TupTH.hs  reifier.hs  test.hs
viewpattern/: Main.hs
wai-example/: Main.hs  Middleware.hs  Test.hs
websock.hs/: Main.hs  websock.cabal
websock.rb/: chrome-debug.rb  echo.rb
(+27 files in other folders)
