name:                effin-test
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable effin-test
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base ==4.*
                     , effin
                     , transformers
