name:                github-milestone
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable github-api
  main-is:             Main.hs
  extensions:          OverloadedStrings
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , github
                     , simple-config
                     , parsec
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
