name:                test
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable test
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.*
                     , lens
                     , mtl
                     , text
                     , containers
