name:                mecab-test
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Yusuke Nomura <yunomu@gmail.com>
maintainer:          Yusuke Nomura <yunomu@gmail.com>
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable mecab-test
  main-is:             Main.hs
  -- other-modules:       
  ghc-options:         -Wall
                       -fno-warn-unused-do-bind
  extra-lib-dirs:      /usr/local/opt/mecab/lib
  extra-libraries:     mecab
  build-depends:       base ==4.*
                     , mecab
                     , text
                     , bytestring

--executable gen
--  main-is:             CSV.hs
--  ghc-options:         -Wall
--                       -fno-warn-unused-do-bind
--  build-depends:       base ==4.*
--                     , csv-conduit
--                     , conduit
