name:                reversi
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yusuke Nomura<yunomu@gmail.com>
maintainer:          Yusuke Nomura<yunomu@gmail.com>
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable reversi
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.*
                     , matrix
                     , mtl
                     , parsec
                     , vector
                     , void
