name:                websock
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
--license-file:        LICENSE
author:              Yusuke Nomura
maintainer:          yunomu@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Main
  -- other-modules:       
  -- other-extensions:    
  extensions:          OverloadedStrings
  build-depends:       base >=4.6 && <4.7
                     , io-streams
                     , websockets
                     , transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
